weather_mpvie api

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "city-explorer-api",
   "version": "1.0.0",
   "description": "api project",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "ok"
   },
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/KhwailehFatima/city-explorer-api#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1"
